--- a/Linear Algebra Done Outrageous/Linear_Algebra_Done.tex
+++ b/Linear Algebra Done Outrageous/Linear_Algebra_Done.tex
@@ -3,7 +3,7 @@
 \input{macros}
 \input{letterfonts}
 
-\title{Linear Algebra Done Outrageous (Taiwanese Version)}
+\title{Linear Algebra Done Taiwan}
 \author{Eric Liu}
 \date{}
 \begin{document}
@@ -210,8 +210,8 @@ S \triangleq \sum_{i=1}^{k} \xi_i \pi_i.
 \end{align*}
 Since \( S \) is a polynomial in \( T \), we conclude that \( S \) and \( N \) commute. The fact that \( N \) is nilpotent follows from the definitions of \( f_i \). We now prove the uniqueness. Let $T=S'+N'$ be another Jordan-Chevalley decomposition. We are required to prove $S-S'=0$. Clearly $\set{S,N,S',N'}$ all commute with each other. This implies $S-S'=N-N'$ is nilpotent. Note that  $S-S'$ is diagonalizable\footnote{Two commuting linear operator $S,S'$ over finite dimensional vector space are always simultaneously diagonalizable. Prove this by first proving that $E(\ld ,S)$ is stable under $S'$ and then consider  $V=E(\ld_1,S)\oplus  \cdots \oplus   E(\ld_k,S)$} . This now implies $S-S'=0$, since no units are zero-divisor. 
 
-
 \section{Jordan Form}
+\label{JF}
 \begin{theorem}
 \label{JfNO}
 \textbf{(Jordan forms of Nilpotent Operators)} Let $V$ be a finite-dimensional vector space, and let  $N \in \operatorname{End}(V)$ be nilpotent. There exists some $v_1,\dots ,v_m \in V$ and nonnegative integer $n_1,\dots ,n_m$ such that 
@@ -389,7 +389,7 @@ Because of such, we often write $X$ simply as  $V_1 \otimes V_2$ and denote $g(v
 
 At this point, one may already observe that we may restate the universal property of tensor product as follows. Given a finite collection $\set{V_1,\dots ,V_n}$ of $\F$-vector spaces, we say the $\F$-vector space $V_1\otimes  \cdots \otimes  V_n$ and the $\F$-multilinear map $\otimes  :V_1\times \cdots \times V_n \rightarrow V_1 \otimes  \cdots \otimes  V_n$ satisfies the universal property if for every $\F$-multilinear map  $f:V_1\times \cdots \times V_n \rightarrow W$, there exists a unique $\F$-linear map  $\tilde{f}:V_1 \otimes  \cdots \otimes  V_n$ such that $\tilde{f}(v_1\otimes  \cdots \otimes  v_n)=f(v_1,\dots ,v_n)$ for every  $(v_1,\dots ,v_n)\in V_1 \times \cdots \times V_n$.  \\
 
-Even thought in general consensus, the construction of the tensor product is unimportant, here, we make the remark that the construction we gave shows that if $B_j$ are finite bases for $V_j$, then  $\set{v_1\otimes \cdots \otimes  v_n \in V_1 \otimes  \cdots \otimes  V_n: v_j \in B_j\text{ for all }j}$ forms a basis for $V_1\otimes  \cdots \otimes  V_n$. In fact, this together with the universal property may be the only things about tensor product one will ever need to develop other properties of tensor products. 
+Even thought the construction of the tensor product is deemed unimportant by general consensus, here, we make the remark that the construction we gave do show that if $B_j$ are finite bases for $V_j$, then  $\set{v_1\otimes \cdots \otimes  v_n \in V_1 \otimes  \cdots \otimes  V_n: v_j \in B_j\text{ for all }j}$ forms a basis for $V_1\otimes  \cdots \otimes  V_n$. In fact, this together with the universal property may be the only things about tensor product one will ever need to develop other properties of tensor products. 
 \section{Exterior Algebra}
 Let $V$ be some finite-dimensional $\F$-vector space. In this note, by the \textbf{exterior $n$-th power} $\extp^n V$ of $V$, we mean the space of the antisymmetric multilinear maps from $(V^*)^n$ to $\F$, together with a multilinear map $\wedge :V^n \rightarrow \extp^n V$ defined by 
 \begin{align*}
@@ -1674,13 +1674,110 @@ p(x)\triangleq \prod_{i=1}^k \frac{\overline{x_i}(x-x_1)\cdots (x-x_{i-1})(x-x_{
 Let $T \in \operatorname{End}(V)$ for finite dimensional $\C$-vector space  $V$. Prove the existence and uniqueness of Jordan-Chevalley decomposition $T=S+N$. Show that there exists some polynomial $\tilde{p}  \in \C [x]$ such that $S=\tilde{p} (T)$ and $\tilde{p} (0)=0$.
 \end{question}
 \begin{proof}
-In my personal opinion, this is a question shitty for exam. There are multiple distinct\footnote{distinct in the sense that how much  universal polynomial ring theory one wish to employ} approaches to show the existence and uniqueness of Jordan-Chevalley decomposition, but there is essentially only one approach, i.e., the ones quoting the Chinese Remainder Theorem without giving a proof, that is short enough to fully write down in exam time.\\ 
+In my personal opinion, this is a shitty question for exam. There are multiple distinct\footnote{distinct in the sense that how much ring theory one wish to directly employ.} approaches to show the existence and uniqueness of Jordan-Chevalley decomposition, but there is essentially only one approach, i.e., the ones quoting the Chinese Remainder Theorem without giving a proof, that is short enough to fully write down in exam time.\\ 
 
 Here, we offer a proof that use only Bezout's identity, i.e., the one we presented at the end of \myref{Section}{JCD}, which is short enough I guess.\\ 
 
 
-The only part the question require us to prove that the argument presented at the end of \myref{Section}{JCD} didn't prove is that we may select some $\tilde{p}  \in \C [x]$ so that not only $S=\tilde{p} (T)$ but also  $\tilde{p} $ has zero constant term. Let $p=\sum \xi_i q_i f_i$ where $\xi_i,q_i,f_i$ are defined at the end of \myref{Section}{JCD}. To prove this, we first note that because $T-p(T)$ is nilpotent, we may find $n$ such that the polynomial  $(x-p)^n$ sends $T$ to $0$. If $p$ has zero constant term, then  $\tilde{p}\triangleq p$ suffice. If $p$ has nonzero constant term, then  $(x-p)^n$ also has nonzero constant term and $\tilde{p}\triangleq p- \frac{\text{ constant term of $p$}}{\text{ constant term of }(x-p)^n}(x-p)^n \in \C [x]$ is a polynomial that sends $T$ to $0$ and has zero constant term.  
+The only part the question require us to prove that the argument presented at the end of \myref{Section}{JCD} didn't show is that we may select some $\tilde{p}  \in \C [x]$ so that not only $S=\tilde{p} (T)$ but also  $\tilde{p} $ has zero constant term. Let $p=\sum \xi_i q_i f_i$ where $\xi_i,q_i,f_i$ are defined at the end of \myref{Section}{JCD}. To prove this, we first note that because $T-p(T)$ is nilpotent, we may find $n$ such that the polynomial  $(x-p)^n$ sends $T$ to $0$. If $p$ has zero constant term, then  $\tilde{p}\triangleq p$ suffice. If $p$ has nonzero constant term, then  $(x-p)^n$ also has nonzero constant term and $\tilde{p}\triangleq p- \frac{\text{ constant term of $p$}}{\text{ constant term of }(x-p)^n}(x-p)^n \in \C [x]$ is a polynomial that sends $T$ to $0$ and has zero constant term.  
 \end{proof}
+\section{Year 105}
+\begin{question}{}{}
+Prove the \textbf{Cayley-Hamilton Theorem}: If $V$ is a finite dimensional vector space and  $T \in \operatorname{End}(V)$ has characteristic polynomial $p(x)$, then $p(T)=0$. 
+\end{question}
+\begin{proof}
+\textbf{Cayley-Hamilton Theorem} has been addressed at the end of \customref{JF}{the section on Jordan form}. Fix some basis $\beta  $ of $V$, let $\F$ be the underlying field of  $V$, and consider  the Jordan form of $[T]_\beta  \in M_{\operatorname{dim}(V)}(\F)$, which is a matrix $J$ in general with coefficients in $\overline{\F}$. By definition, $[T]_{\beta }$ have characteristic polynomial $p$. Because  $J=P[T]_{\beta }P^{-1}$ for some $P \in M_{\operatorname{dim}(V)}(\overline{\F})$ and in general  $\operatorname{det}(ABA^{-1})=\operatorname{det}(B)$, $J$ have the characteristic polynomial same as  $[T]_\beta $, i.e.,  $p$. Clearly $p(J)=0$ by direct computation, since $J$ is in Jordan form. Now, because $0=p(J)=Pp([T]_{\beta })P^{-1}$, we see $p([T]_{\beta })=0$, which implies $p(T)=0$. 
+\end{proof}
+\begin{question}{}{}
+Let $\F$ be arbitrary field and  $A \in M_{m\times n}(\F)$. Show that: 
+\begin{enumerate}[label=(\roman*)]
+  \item The row ranks of $A$ equals the column ranks of $A$.  
+  \item If $A$ have rank  $r$, then  $AA^t$ also have rank  $r$. 
+\end{enumerate}
+\end{question}
+\begin{proof}
+  Suppose $\operatorname{rank}(A)=r$. Let $\alpha \triangleq \set{e_1,\dots ,e_n}$ and $\beta  \triangleq \set{e_1',\dots ,e_m'}$ respectively be basis for $\F^n$ and  $\F^m$ such that  $\set{A(e_1)=e_1',\dots ,A(e_r)=e_r'}$ form a basis for image of $A$,\footnote{ To construct $\alpha$ and $\beta $, consider: $\set{A(v_1),\dots ,A(v_r)}$ is linearly independent then $v_1,\dots ,v_r$ are linearly independent.}, and let $\gamma$ and $\delta$ respectively be the standard basis for $\F^n$ and  $\F^m$.  Let $\alpha ^{\vee}\triangleq \set{\pfi_1,\dots ,\pfi_n},\beta ^{\vee}\triangleq \set{\psi_1,\dots ,\psi_m},\gamma ^{\vee}$, and $\delta^{\vee}$ be the dual bases. Let $A^{\vee}:(\F^m)^* \rightarrow (\F^n)^*$ be the dual map of $A$.  After setting these definitions, to get full credits of the first problem, one only need to show 
+\begin{align*}
+  [A^{\vee}]_{\delta  ^{\vee}}^{\gamma ^{\vee}}= A^t
+\end{align*}
+and show
+\begin{align}
+\label{Avf}
+  A^{\vee}(\psi_i)=\begin{cases}
+    \phi_i & \text{ if }i\leq r\\
+    0& \text{ if $i>r$ }
+  \end{cases}
+\end{align}
+They are all routine to check. The second problem seems to be wrong. Consider the field $\F=\Z_2$, and 
+\begin{align*}
+A=\begin{bmatrix}
+  1 & 1 \\
+  1 & 1 
+\end{bmatrix}
+\end{align*}
+\end{proof}
+\begin{question}{}{}
+Let $\mathbb{F}$ be arbitrary field and let $\mathcal{C}$ be a possibly infinite collection of $n\times n$ $\F$-matrices that are all diagonalizable and commute. Prove that there exists some $P \in GL_n(\F)$ such that  $PA_iP^{-1}$ are diagonal for all $i \in I$.   
+\end{question}
+\begin{proof}
+Because $\operatorname{End}(\F^n)$ is finite dimensional, there exists some finite subset of  $\mathcal{C}$ whose spans contains all $\mathcal{C}$. Clearly, if there exists a basis that contains only eigenvectors of the elements this finite subset, then every linear operator in $\mathcal{C}$ with respect to this basis is diagonal, since each of them is a finite linear combination of the elements of the finite subset. \\
+
+We have reduced the case of $\C$ being finite. Write $\mathcal{C}\triangleq \set{A_1,\dots ,A_m}$. Let $\Lambda_i$ be the set of eigenvalues of $A_i$. It remains to show 
+\begin{align}
+\label{Fn}
+\F^n = \bigoplus_{\ld_i \in \Lambda _i} (E(\ld_1,A_1) \cap  \cdots \cap  E(\ld _m,A_m) )
+\end{align}
+We shall show \myref{Equation}{Fn} by induction on $m$. The base case is when $m=2$. Let $\ld \in \Lambda _1$. Clearly, for each $v \in E(\ld ,A_1)$, we have 
+\begin{align}
+\label{AldI}
+  (A_1- \ld I)(A_2v)= A_2(A_1-\ld I)v=0 
+\end{align}
+We have shown eigenspaces with respect to $A_1$ are all stable under  $A_2$. Because restriction of diagonalizable linear operator is still diagonalizable, for each $\ld \in \Lambda _1$, we have 
+\begin{align*}
+E(\ld ,A_1)= \bigoplus_{\mu \in \Lambda_2} E(\mu ,A_2|_{E(\ld ,A_1)})= \bigoplus_{\mu \in \Lambda _2} E(\ld ,A_1)\cap E(\mu,A_2)
+\end{align*}
+where the second equality hold trivially. The base case $m=2$ now follows from $\F^n=\bigoplus_{\ld  \in \Lambda _1} E(\ld ,A_1)$. We now prove the inductive case. Suppose 
+\begin{align*}
+\F^n = \bigoplus_{\ld_i \in \Lambda _i} (E(\ld_1,A_1) \cap  \cdots \cap  E(\ld _{m-1},A_{m-1}) )
+\end{align*}
+Fix $\ld _i \in \Lambda _i$. Again for the same reason \myref{Equation}{AldI}, for each $i\leq m-1$, eigenspace $E(\ld_i,A_i)$ is stable under $A_m$, so clearly $V\triangleq E(\ld _1,A_1)\cap \cdots \cap E(\ld _{m-1},A_{m-1})$ is stable under $A_m$. Again because restriction of diagonalizable linear operator is still diagonalizable, we have 
+\begin{align*}
+V=\bigoplus _{\ld  \in \Lambda _m} E(\ld , A_m |_V)= \bigoplus_{\ld  \in \Lambda _m} E(\ld_1,A_1)\cap \cdots \cap E(\ld _{m-1},A_{m-1}) \cap E(\ld ,A_m)
+\end{align*}
+where the second equality hold by definition of $V$ as one can check. We have shown  \myref{Equation}{Fn}. 
+\end{proof}
+\begin{question}{}{}
+Prove the \textbf{Spectral Theorem for finite dimensional complex vector space}. 
+\end{question}
+\begin{proof}
+This has been addressed in  \customref{Spectral Theorem}{the section on spectral theorem}. Long story short, you consider Jordan form, use Gram-Schmidt process to get Schur's form, and use the hypothesis of the linear operator being normal to deduce that its Schur's form is in fact diagonal, via direct computation.     
+\end{proof}
+\begin{question}{}{}
+Let $V$ be a finite-dimensional complex vector space, and let $T \in \operatorname{End}(V)$ has characteristic polynomial $p$. Suppose $p=q_1q_2$ for some  $q_1$ and $q_2 \in \C[x]$ that have no common roots in $\C$.  Show that there exists subspace $W_1$ and  $W_2 \subseteq V$ that satisfies
+\begin{enumerate}[label=(\roman*)]
+  \item $V=W_1 \oplus W_2$.
+  \item $W_1$ and  $W_2$ are both stable under  $T$.  
+  \item the characteristic polynomials of $T|_{W_1}$ and $T|_{W_2}$ are respectively $q_1$ and $q_2$.  
+\end{enumerate}
+\end{question}
+\begin{proof}
+Suppose $q_1$ and $q_2$ respectively have distinct roots  $\set{\ld _1,\dots ,\ld _r}$ and $\set{\ld_{r+1},\dots ,\ld _m}$. Recall that we prove in \myref{Theorem}{DiGE} that 
+\begin{align*}
+V=G(\ld_1,T)\oplus  \cdots \oplus  G(\ld _m,T)
+\end{align*}
+We claim 
+\begin{align*}
+W_1\triangleq  G(\ld_1,T)\oplus  \cdots \oplus G(\ld_r,T) \text{ and }W_2 \triangleq G(\ld _{r+1},T) \oplus  \cdots \oplus  G(\ld _m,T)
+\end{align*}
+suffice. Clearly they are stable under $T$. It remains to show  $T |_{W_1}$ and $T|_{W_2}$ respectively have characteristic polynomial $q_1$ and  $q_2$. Let $\alpha\subseteq W_1$ and $\beta  \subseteq W_2$ be such that $\alpha \cup  \beta $ form a Jordan basis for $V=W_1 \oplus W_2$. It is then routine to check (in order) that: 
+\begin{enumerate}[label=(\roman*)]
+  \item $\alpha $ and $\beta $ each form a basis respectively for $W_1$ and $W_2$.  
+  \item $[T]_{\alpha \cup  \beta }=[T|_{W_1}]_{\alpha }\oplus [T|_{W_2}]_{\beta }$. (the $\oplus $ here simply means putting a $n\times n$ matrix and a $m \times m$ matrix to form a $(n+m)\times (n+m)$ matrix the way you imagined). 
+  \item $\alpha ,\beta $ are respectively Jordan basis for $T|_{W_1},T|_{W_2}$. 
+  \item $T|_{W_1}$ and $T|_{W_2}$ respectively have characteristic polynomials $q_1$ and  $q_2$. 
+\end{enumerate}
+\end{proof}
+\chapter{NTU MATH M.A. Program Entrance Exam Round 2}
 \section{NTU Round 2 Year 106}
 \begin{question}{}{}
 Show that if 
